--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/classnames": "^2.3.1",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.75.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
