--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.8",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
@@ -46,7 +45,9 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.14.5",
     "node-sass": "^7.0.3",
-    "sass-loader": "^14.2.1"
+    "sass-loader": "^14.2.1",
+    "vite": "^5.3.1"
   }
 }
