--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "tsc",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +44,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.5",
+    "@vitejs/plugin-react": "^4.3.1",
     "node-sass": "^7.0.3",
+    "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
     "vite": "^5.3.1"
   }
