--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,16 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"],
+    "types": ["vite/client"],
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "outDir": "build"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/main.js"],
   "exclude": ["node_modules"]
 }
